# Youbot

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  frames.gv  package.xml
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/include/slaw_youbot_arm_navigation_actions/: MoveArmIKAction.h  MoveArmIKActionFeedback.h  MoveArmIKActionGoal.h  MoveArmIKActionResult.h  MoveArmIKFeedback.h  MoveArmIKGoal.h  MoveArmIKResult.h  MoveArmLinearAction.h  MoveArmLinearActionFeedback.h  MoveArmLinearActionGoal.h  MoveArmLinearActionResult.h  MoveArmLinearFeedback.h  MoveArmLinearGoal.h  MoveArmLinearResult.h  VelocityControlledJointTrajectoryAction.h  VelocityControlledJointTrajectoryActionFeedback.h  VelocityControlledJointTrajectoryActionGoal.h  VelocityControlledJointTrajectoryActionResult.h  VelocityControlledJointTrajectoryFeedback.h  VelocityControlledJointTrajectoryGoal.h  VelocityControlledJointTrajectoryResult.h
devel/include/slaw_youbot_arm_navigation_msgs/: ArmConfiguration.h  EndeffectorPosition.h
devel/include/slaw_youbot_arm_navigation_srvs/: MoveArm.h  MoveArmIK.h  MoveArmIKRequest.h  MoveArmIKResponse.h  MoveArmLinear.h  MoveArmLinearRequest.h  MoveArmLinearResponse.h  MoveArmRequest.h  MoveArmResponse.h  MoveJoints.h  MoveJointsRequest.h  MoveJointsResponse.h  SetSide.h  SetSideRequest.h  SetSideResponse.h  SimpleIkSolver.h  SimpleIkSolverRequest.h  SimpleIkSolverResponse.h
devel/lib/pkgconfig/: slaw_youbot_arm_navigation_actions.pc  slaw_youbot_arm_navigation_msgs.pc  slaw_youbot_arm_navigation_srvs.pc  slaw_youbot_arm_navigation_utils.pc  youbot_description.pc  youbot_gazebo_control.pc  youbot_gazebo_robot.pc  youbot_gazebo_worlds.pc
ira_laser_tools/cfg/: laserscan_multi_merger.cfg
slaw_youbot_arm_navigation/: README  README.md  package.xml
slaw_youbot_arm_navigation/slaw_youbot_arm_navigation/: CMakeLists.txt
slaw_youbot_arm_navigation/slaw_youbot_arm_navigation_actions/action/: MoveArmIK.action
slaw_youbot_arm_navigation/slaw_youbot_arm_navigation_srvs/: CMakeLists.txt
slaw_youbot_arm_navigation/slaw_youbot_arm_navigation_utils/: youbot_arm.rviz
slaw_youbot_arm_navigation/slaw_youbot_arm_navigation_utils/config/: joints_configuration.yaml  joints_configuration.yaml.save
slaw_youbot_arm_navigation/slaw_youbot_arm_navigation_utils/description/: youbot.urdf.xacro
slaw_youbot_arm_navigation/slaw_youbot_arm_navigation_utils/launch/: joint_trajectory_action.launch
slaw_youbot_arm_navigation/slaw_youbot_arm_navigation_utils/nodes/: joint_trajectory_action.py  youbot_arm_server.py  youbot_simple_ik_server.py
slaw_youbot_arm_navigation/slaw_youbot_arm_navigation_utils/src/slaw_youbot_arm_navigation_utils/: arm_utils.py
slaw_youbot_arm_navigation_actions/: CMakeLists.txt  package.xml
slaw_youbot_arm_navigation_msgs/: CMakeLists.txt  package.xml
slaw_youbot_arm_navigation_msgs/msg/: ArmConfiguration.msg  EndeffectorPosition.msg
slaw_youbot_arm_navigation_srvs/: CMakeLists.txt  package.xml
slaw_youbot_arm_navigation_srvs/srv/: MoveArm.srv  MoveArmIK.srv  MoveArmLinear.srv  MoveJoints.srv  SetSide.srv  SimpleIkSolver.srv
slaw_youbot_arm_navigation_utils/: CMakeLists.txt  package.xml  setup.py  youbot_arm.rviz
slaw_youbot_arm_navigation_utils/config/: joints_configuration.yaml
slaw_youbot_arm_navigation_utils/description/: base.urdf.xacro  camera.urdf.xacro  complete_gripper.dae  complete_gripper.stl  gripper.urdf.xacro  rockin_marker.urdf.xacro  youbot.urdf.xacro
slaw_youbot_arm_navigation_utils/launch/: fake_arm_navigation.launch  joint_trajectory_action.launch  slaw_arm_navigation.launch
slaw_youbot_arm_navigation_utils/nodes/: arm_mockup.py  follow_circle.py  follow_sine.py  joint_velocity_action.py  ps3_arm_control.py  side_joint_publisher.py  youbot_arm_server.py  youbot_simple_ik_server.py
slaw_youbot_arm_navigation_utils/src/slaw_youbot_arm_navigation_utils/: arm_utils.py  ik_solver.py
technical_drawings/youbot_Afleg_Plaat/SolidWorks_drawings/: youbot_Afleg_Plaat.SLDDRW
technical_drawings/youbot_Afleg_Plaat/SolidWorks_parts/: youbot_Afleg_Plaat.SLDPRT
technical_drawings/youbot_Afleg_Plaat/dxf/: alu 2mm - 2x - youbot_Afleg_Plaat.DXF
technical_drawings/youbot_Afleg_Plaat/stl/: youbot_Afleg_Plaat.STL
technical_drawings/youbot_Mounting_And_Sensor_Plate/SolidWorks_drawings/: youbot_Mounting_And_Sensor_Plate.SLDDRW
technical_drawings/youbot_Mounting_And_Sensor_Plate/SolidWorks_parts/: youbot_Mounting_And_Sensor_Plate.SLDPRT
technical_drawings/youbot_Mounting_And_Sensor_Plate/dxf/: alu 5mm - 1x - youbot_Mounting_And_Sensor_Plate.DXF
technical_drawings/youbot_Mounting_And_Sensor_Plate/stl/: youbot_Mounting_And_Sensor_Plate.STL
youbot_bringup/: CMakeLists.txt  package.xml
youbot_bringup/config/: base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  logitech_holonomic.config.yaml
youbot_bringup/launch/: bringup.launch  bringup.launch.save  camera.launch  hokuyo.launch  lasers.launch  mapping.launch  movebase.launch  navigation.launch  simpleIK.launch  simulation.launch  teleop.launch
youbot_bringup/maps/: lectoraat.pgm  lectoraat.yaml  map.pgm  map.yaml
youbot_bringup/rc.local/: rc.local
youbot_bringup/rules.d/: 10-youbot.rules  45-lcd-battery.rules  46-dynamixel.rules  47-hokuyo.rules  50-ds4drv.rules  70-persistent-net.rules
youbot_bringup/rviz/: urdf.rviz
youbot_description/robots/: youbot.urdf.xacro
youbot_driver/config/: youbot-manipulator.cfg
youbot_driver_ros_interface/src/: YouBotOODLWrapper.cpp
youbot_dynamixel/: CMakeLists.txt  gripper.yaml  package.xml
youbot_dynamixel/launch/: dynamixel.launch
youbot_gripper/: CMakeLists.txt  package.xml
youbot_gripper/config/: gripper.yaml
youbot_gripper/launch/: gripper.launch
youbot_gripper/nodes/: gripper_controller.py
youbot_smach/: CMakeLists.txt  package.xml
youbot_smach/src/: mainStateMachine.py
youbot_statemachine/: Statemachine.py  Statemachine.py.save  Statemachine2.py
(+130 files in other folders)
