<?xml version="1.0"?>
<package>
  <name>slaw_youbot_arm_navigation_srvs</name>
  <version>1.0.0</version>
  <description>slaw_youbot_arm_navigation_srvs</description>
  <maintainer email="smartlab.liv@gmail.com">Daniel Claes</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/slaw_arm_navigation</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Daniel Claes</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>slaw_youbot_arm_navigation_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>


  <run_depend>slaw_youbot_arm_navigation_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>