cmake_minimum_required(VERSION 2.8.3)
project(slaw_youbot_arm_navigation_utils)

find_package(catkin REQUIRED)

## Uncomment this if the package has a setup.py. This macro ensures
## modules and global scripts declared therein get installed
## See http://ros.org/doc/api/catkin/html/user_guide/setup_dot_py.html
catkin_python_setup()

catkin_package(
#  INCLUDE_DIRS include
#  LIBRARIES slaw_youbot_arm_navigation_utils
#  CATKIN_DEPENDS other_catkin_pkg
#  DEPENDS system_lib
)
