<package>
    <name>slaw_youbot_arm_navigation_utils</name>
    <version>1.0.0</version>
    <description>slaw_arm_navigation</description>
    <maintainer email="smartlab.liv@gmail.com">Daniel Claes</maintainer>

    <license>BSD</license>

    <url type="website">http://ros.org/wiki/slaw_arm_navigation</url>
    <!-- <url type="bugtracker"></url> -->

    <author>Daniel Claes</author>

    <!-- Dependencies which this package needs to build itself. -->
    <buildtool_depend>catkin</buildtool_depend>

    <!-- Dependencies needed after this package is compiled. -->
    <run_depend>brics_actuator</run_depend>
    <run_depend>control_msgs</run_depend>
    <run_depend>dynamic_reconfigure</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>rospy</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>slaw_actions</run_depend>
    <run_depend>slaw_srvs</run_depend>
    <run_depend>trajectory_msgs</run_depend>
    <run_depend>youbot_description</run_depend>

</package>
